Added link to the project repo

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                         <li><a href="#hobbies" class="footer__link">Hobbies</a></li>
                         <li><a href="#Contact" class="footer__link">Contact me</a></li>
                         <li><a href="./src/Tomas_Hecko_CV.pdf" class="footer__link" download>Download CV</a></li>
+                        <li><a href="https://github.com/TomTom258/Personalized-CV" class="footer__link">This Project Repo</a></li>
                     </ul>
                 </div>
             </div>
