Added CLI as a skill option

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                         <h3 class="skills__subtitle">Others</h3>
                         <span class="skills__name">Git</span>
                         <span class="skills__name">GitHub</span>
+                        <span class="skills__name">CLI</span>
                         <span class="skills__name">Jira</span>
                         <span class="skills__name">Docker</span>
                         <span class="skills__name">JWT</span>
