Changed contacting e-mail address

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="contact__info"> 
                         <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">01tomas01@gmail.com</span>
+                        <span class="contact__text">tomas.hecko96@gmail.com</span>
 
                         <h3 class="contact__subtitle">PHONE</h3>
                         <span class="contact__text">+421 944 162 840</span>
