Update of information

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                         <span class="about__profession">Full stack web developer looking for a job</span>
                         <p class="about__text">
                             Welcome to my personalized CV page!
-                            In this small project I want to show you my skills overall and also what I'm passionate about (apart from coding of course).
                             I've always enjoyed working with computers in a wide range
                             of ways (creating material, designing), as well as building them and learning how
                             they operate. I enjoy problem-solving, critical thinking, and gaining knowledge of new technologies.
@@ -63,7 +62,9 @@
                             I graduated from Teaching History and Ethics and got MA degree. I've always love to work with PC's but I decided to pursue
                             teaching because that's also something I'm passionate about and at that time I was afraid of failing in maths (smile).
                             The studies definitely brought me a lot of other useful skills
-                            which are transferable to any other field as well. I would love to become a web-developer!
+                            which are transferable to any other field as well. I have built my first programs being 16 years old using Delphi or built a custom Wordpress page with different plugins.
+                            Currently I work in a Fin-Tech sphere on a Full-Stack project. I thrive to be better at what I do everyday,
+                            trying to figure out how to do it in better way while still enjoying the challenge that comes with it.
                         </p>
                         <div class="about__social">
                             <a href="https://www.linkedin.com/in/tomashecko/" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
@@ -85,30 +86,32 @@
                         <span class="skills__name">DOM</span>
                         <span class="skills__name">Javascript</span>
                         <span class="skills__name">Typescript</span>
-                        <span class="skills__name">React</span>
-                        <span class="skills__name">Context API</span>
-                        <span class="skills__name">Jest</span>
+                        <span class="skills__name">Angular JS</span>
                         
                         <h3 class="skills__subtitle">Back-end</h3>
-                        <span class="skills__name">Node.js</span>
-                        <span class="skills__name">Express</span>
-                        <span class="skills__name">MySQL</span>
-                        <span class="skills__name">AWS</span>
-                        <span class="skills__name">Java</span>
-                        <span class="skills__name">Gradle</span>
+                        <span class="skills__name">Java 11</span>
                         <span class="skills__name">Spring Boot</span>
-                        <span class="skills__name">Hibernate</span>
-                        <span class="skills__name">Mockito</span>
-                        <span class="skills__name">Thymeleaf</span>
-                        <span class="skills__name">Spring Security</span>
+                        <span class="skills__name">SQL</span>
+                        <span class="skills__name">Maven</span>
+                        <span class="skills__name">JPA</span>
+                        <span class="skills__name">JUnit</span>
+
+                        <h3 class="skills__subtitle">Cloud</h3>
+                        <span class="skills__name">AWS</span>
+                        <span class="skills__name">EC2</span>
+                        <span class="skills__name">ECR</span>
+                        <span class="skills__name">Kubernetes</span>
+                        <span class="skills__name">Helm</span>
+                        <span class="skills__name">Jenkins</span>
 
                         <h3 class="skills__subtitle">Others</h3>
                         <span class="skills__name">Git</span>
-                        <span class="skills__name">GitHub</span>
+                        <span class="skills__name">Bash</span>
                         <span class="skills__name">CLI</span>
+                        <span class="skills__name">XML / XSLT</span>
                         <span class="skills__name">Jira</span>
-                        <span class="skills__name">Docker</span>
-                        <span class="skills__name">JWT</span>
+                        <span class="skills__name">Confluence</span>
+                        <span class="skills__name">Agile Development</span>
                     </div>
                     <div class="skills__img">
                         <img src="./src/skills.jpg" alt="">
